# stressTest_v2

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  bs_diag.py  check_stress.py  docker-compose.yml  pyproject.toml  requirements.txt
audit/: phase1_prep.md  phase2_baseline_pre.txt  phase2_report.md  phase2_test_result.json  phase4a_parse_result.json  phase4a_smoke_report.md  phase4a_v2_parse_result.json  phase4a_v2_smoke_report.md  phase4b_agg_disc_db.json  phase4b_agg_disc_parser.json  phase4b_agg_discovery.md  phase4b_agg_report.md  phase4b_discovery_dumps.json  phase4b_discovery_pages.json  phase4b_discovery_report.md  phase4b_i_fix_report.md  phase4b_i_report.md  phase4b_ii_hotfix_report.md  phase4b_ii_parse_result.json  phase4b_ii_report.md  phase4b_ii_smoke_report.md  phase4b_iii_parse_result.json  phase4b_iii_report.md  phase4b_iii_smoke_report.md  phase4c_associates_result.json  phase4c_associates_smoke_report.md  phase4c_debt_parse_result.json  phase4c_debt_report.md  phase4c_debt_smoke_report.md  phase4c_discovery_data_dumps.json  phase4c_discovery_dumps.json  phase4c_discovery_pages.json  phase4c_discovery_report.md  phase4c_intangibles_result.json  phase4c_intangibles_smoke_report.md  phase4c_inv_parse_result.json  phase4c_inv_report.md  phase4c_inv_smoke_report.md  phase4c_lease_report.md  phase4c_lease_result.json  (+21 more)
docs/: 00_PROJECT_OVERVIEW.md  01_MODELING_SCHEMA.md  02_DATABASE_SCHEMA.md  03_YAML_CONFIGURATION.md  04_DATA_LOADING.md  05_MACRO_MODULE.md  06_STRESS_RATING_COVENANTS.md  07_US_STEEL_EXAMPLE.md  HANDOFF_FINAL.md  (+18 more)
(+291 files in other folders)
